fix  "[alacritty_config_derive] Config warning"
[79.184710665s] [WARN ] [alacritty_config_derive] Config warning: bar has been deprecated; use `colors.footer_bar` instead

--- a/Rises/Hyprland/Hyprland_27-04-2022/.config/alacritty/alacritty.yml
+++ b/Rises/Hyprland/Hyprland_27-04-2022/.config/alacritty/alacritty.yml
@@ -57,7 +57,7 @@ colors:
     focus_match:
       foreground: '#000000'
       background: '#E040FB'
-    bar:
+    color.footer_bar:
       foreground: '#B388FF'
       background: '#121212'
   selection:
