"add extra terminal `wezterm` "

--- a/Rises/Hyprland/Hyprland_27-04-2022/.config/hypr/hyprland.conf
+++ b/Rises/Hyprland/Hyprland_27-04-2022/.config/hypr/hyprland.conf
@@ -71,6 +71,7 @@ windowrule=monitor 0,xyz
 
 # example binds
 bind=SUPER,RETURN,exec,alacritty
+bind = SUPER, X, exec, wezterm
 bind=SUPER,Q,killactive,
 bind=SUPER,M,exec,pkill Hyprland
 bind=SUPER,E,exec,thunar
