"added `btop` key-bind"
change Terminal name with your choice : `(alacritty/kitty)` .

--- a/Rises/Hyprland/Hyprland_8-02-2023/.config/hypr/hyprland.conf
+++ b/Rises/Hyprland/Hyprland_8-02-2023/.config/hypr/hyprland.conf
@@ -177,6 +177,7 @@ bind = $mainMod, D, exec, wofi
 #bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = SUPER, H, exec, alacritty -e btop #change Terminal name with choice(alacritty/kitty).
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
